# boost-safeprofile

./: .gitignore  CASE-STUDY-BOOST-JSON.md  CLAUDE.md  CMakeLists.txt  Design.md  PHASE-0-CHECKLIST.md  README.md  RED-TEAM-SPRINT-1.md  RED-TEAM-TESTING.md  RULES-ROADMAP.md  Requirements.md  SELF-TEST.md
.github/: DISCOVERY.md  LABELS.md
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake
demo/: violations.cpp
docs/: building.md  github-setup.md
include/boost/safeprofile/: version.hpp
src/: main.cpp
src/analysis/: ast_detector.cpp  ast_detector.hpp  detector.cpp  detector.hpp
src/cli/: arguments.cpp  arguments.hpp
src/emit/: sarif.cpp  sarif.hpp
src/intake/: compile_commands.cpp  compile_commands.hpp  repository.cpp  repository.hpp
src/profile/: loader.cpp  loader.hpp  rule.hpp
tests/: CMakeLists.txt
tests/fixtures/compile-errors/: README.md  missing-header.cpp  stdlib-includes.cpp  syntax-error.cpp  type-error.cpp
tests/fixtures/stdlib/: README.md  safe-code.cpp  with-violations.cpp
tests/unit/: test_ast_detector.cpp  test_cli.cpp  test_intake.cpp  test_main.cpp
tools/scripts/: install-deps-macos.sh  test-cli.sh
